--- a/pot/2.html
+++ b/pot/2.html
@@ -8,10 +8,13 @@
 
 <body>
     <ul>
-        <li><a href="index.html">главная</a></li>
-        <li><a href="1.html">Самые красивые места</a></li>
-        <li><a href="2.html">История Томска</a></li>
-        <li><a href="3.html">Купить билет в музей</a></li>
+        <ul>
+            <li><a href="index.html">главная</a></li>
+            <li><a href="4.html">Околица</a></li>
+            <li><a href="1.html">Самые красивые места</a></li>
+            <li><a href="2.html">История Томска</a></li>
+            <li><a href="3.html">Купить билет в музей</a></li>
+        </ul>
     </ul>
     <h1>История Томска</h1>
     <p>20 января 1604 года в Москву ко двору Бориса Годунова приехало посольство во главе с князем эуштинских татар
