--- a/pot/1.html
+++ b/pot/1.html
@@ -9,6 +9,7 @@
 <body>
     <ul>
         <li><a href="index.html">главная</a></li>
+        <li><a href="4.html">Околица</a></li>
         <li><a href="1.html">Самые красивые места</a></li>
         <li><a href="2.html">История Томска</a></li>
         <li><a href="3.html">Купить билет в музей</a></li>
