--- a/pot/3.html
+++ b/pot/3.html
@@ -6,10 +6,13 @@
 </head>
 <body>
     <ul>
-        <li><a href="index.html">главная</a></li>
-        <li><a href="1.html">Самые красивые места</a></li>
-        <li><a href="2.html">История Томска</a></li>
-        <li><a href="3.html">Купить билет в музей</a></li>
+        <ul>
+            <li><a href="index.html">главная</a></li>
+            <li><a href="4.html">Околица</a></li>
+            <li><a href="1.html">Самые красивые места</a></li>
+            <li><a href="2.html">История Томска</a></li>
+            <li><a href="3.html">Купить билет в музей</a></li>
+        </ul>
     </ul>
     <a href="https://tomskmuseum.ru/playbill/">купить билет по ссылке....</a>
 </body>
