--- a/pot/4.html
+++ b/pot/4.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Околица</title>
 </head>
+
 <body>
-    
+    <ul>
+        <li><a href="index.html">главная</a></li>
+        <li><a href="4.html">Околица</a></li>
+        <li><a href="1.html">Самые красивые места</a></li>
+        <li><a href="2.html">История Томска</a></li>
+        <li><a href="3.html">Купить билет в музей</a></li>
+    </ul>
+    <h2>Афиша парка «Околица» в Зоркальцево</h2>
+    <p>
+        Сельский парк «Околица» в Томской области является отличным местом для проведения массовых событий и предлагает
+        своим гостям насыщенную афишу мероприятий. Помимо фестиваля «Праздник топора» на территории парка регулярно
+        проводят праздники с игровыми программами, увлекательные мастер-классы для взрослых и детей, интересные
+        конкурсы, крупные молодежные форумы, устраивают концерты местных артистов и творческих коллективов, справляют
+        праздники, такие как День защитника Отечества, 8 Марта, Пасха, Масленица, День защиты детей, Новый Год, а также
+        организовывают различные ярмарки сувениров и товаров народных подворий.
+
+        Посмотреть полную афишу ближайших мероприятий можно на официальном сайте парка.</p>
+        <img src="https://fb.ru/misc/i/gallery/45003/2564270.jpg" alt=""height="300px">
 </body>
+
 </html>
