--- a/petrova/index.html
+++ b/petrova/index.html
@@ -14,8 +14,8 @@
 <body>
 
     <ul>
-        <li><a href="index.html">главная</a></li>
-        <li><a href="page2.html">породы кошек</a></li>
+        <li>jhgkjvkjvhkvvhj<a href="index.html">главная</a></li>
+        <li>adccda<a href="page2.html">породы кошек</a></li>
         <li><a href="page.html">история</a></li>
         <li><a href="https://www.avito.ru/tolyatti/koshki/abissinskie_kotyata_2989063670">купить кошку породы абс</a></li>
     </ul>
