--- a/kav/3.html
+++ b/kav/3.html
@@ -13,6 +13,11 @@
 
         li {
             list-style: none;
+
+        }
+        a{
+            color: black;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -23,8 +28,10 @@
         <li><a href="1.html">Миномет Катюша</a></li>
         <li><a href="2.html">Вертолет Ка-50 черная акула</a></li>
         <li><a href="3.html">Гаубица Б-4М </a></li>
+        <li><a href="4.html">T-34 </a></li>
+        <li><a href="5.html">Р-8 </a></li>
     </ul>
-    <a href="3.html"><img height="200px" src="https://www.kpopov.ru/travel/avtovaz_museum_10/dsc_6859.jpg" alt=""></a>
+    <a href="index.html"><img height="200px" src="https://www.kpopov.ru/travel/avtovaz_museum_10/dsc_6859.jpg" alt=""></a>
     <h1>Гаубица Б-4М</h1>
     <p>203-мм гаубица Б-4М (Индекс ГАУ — 52-Г-625М) — Советская гаубица большой мощности калибра 203 мм (8 дюймов),
         представляющая собой гаубицу Б-4 на колёсном лафете. Главный конструктор — Г. И. Сергеев.
