--- a/kav/1.html
+++ b/kav/1.html
@@ -7,12 +7,17 @@
     <style>
         body {
             background-color: rgb(119, 145, 127);
-            text-align: center;
             padding: 0px 120px 0px 120px;
+            text-align: center;
         }
 
         li {
             list-style: none;
+
+        }
+        a{
+            color: black;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -23,8 +28,10 @@
         <li><a href="1.html">Миномет Катюша</a></li>
         <li><a href="2.html">Вертолет Ка-50 черная акула</a></li>
         <li><a href="3.html">Гаубица Б-4М </a></li>
+        <li><a href="4.html">T-34 </a></li>
+        <li><a href="5.html">Р-8 </a></li>
     </ul>
-    <a href="1.html"><img height="200px"
+    <a href="index.html"><img height="200px"
             src="https://drikus.club/uploads/posts/2021-12/1640210178_4-drikus-club-p-gvardeiskii-minomet-bm-13-katyusha-tekhnik-4.jpg"
             alt=""></a>
     <h1>Миномет Катюша</h1>
