--- a/kav/2.html
+++ b/kav/2.html
@@ -7,13 +7,17 @@
     <style>
         body {
             background-color: rgb(119, 145, 127);
-            text-align: center;
-            text-decoration: none;
             padding: 0px 120px 0px 120px;
+            text-align: center;
         }
 
         li {
             list-style: none;
+
+        }
+        a{
+            color: black;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -24,9 +28,11 @@
         <li><a href="1.html">Миномет Катюша</a></li>
         <li><a href="2.html">Вертолет Ка-50 черная акула</a></li>
         <li><a href="3.html">Гаубица Б-4М </a></li>
+        <li><a href="4.html">T-34 </a></li>
+        <li><a href="5.html">Р-8 </a></li>
     </ul>
 
-    <a href="2.html"><img height="200px"
+    <a href="index.html"><img height="200px"
             src="http://www.rabstol.net/uploads/gallery/main/175/rabstol_net_army_helicopters_08.jpg" alt=""></a>
             <h1>Вертолет Ка-50 черная акула</h1>
     <p>Ка-50 (изделие «800», по классификации НАТО — Hokum A, известен под именем «Чёрная акула») — советский/российский
