--- a/zur/4.html
+++ b/zur/4.html
@@ -19,7 +19,11 @@
         <li>купить</li><a href="page3.html">купить</a>
         <li>видео обзор</li><a href="4.html">видео обзор</a>
     </ul>
-    <a href="https://www.aviasales.ru/cities/ekaterinburg-svx">купить билет в екатеринбург</a>
+    <a href="https://www.youtube.com/watch?v=Gt_wgzlvZ8A&ab_channel=%D0%93%D0%BE%D1%80%D0%BD%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B5Life">посмотреть подборку полностью на ютуб</a>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Gt_wgzlvZ8A" title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
 </body>
 
 </html>
