--- a/zur/page.html
+++ b/zur/page.html
@@ -13,6 +13,7 @@
         <li>география</li><a href="page2.html">география</a>
         <li>история</li><a href="page.html">история</a>
         <li>купить</li><a href="page3.html">купить</a>
+        <li>видео обзор</li><a href="4.html">видео обзор</a>
     </ul>
     <h1>история</h1>
     <img src="2.png" alt="" height="200px">
