--- a/smi/3.html
+++ b/smi/3.html
@@ -1,16 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Егор Крид</title>
+    <title>Капибара</title>
     <style>
-        body{
-            background-color: #ebdbce;
+        body {
+            background-color: #cfeed9;
         }
-        ul{
-            background-color: #d89f95;
+
+        ul {
+            background-color: #96d07d;
         }
     </style>
 </head>
@@ -18,11 +18,12 @@
 <body>
     <ul>
         <li><a href="index.html">Главная</a></li>
-        <li><a href="1.html">Песни Егора Крида</a></li>
-        <li><a href="2.html">История</a></li>
-        <li><a href="3.html">Купить билеты на концерт </a></li>
+        <li><a href="1.html">Внешний вид</a></li>
+        <li><a href="2.html">Где обитает</a></li>
+        <li><a href="3.html">Купить капибару </a></li>
     </ul>
-    <a href="https://msk.kassir.ru/koncert/egor-krid">Купить билет в Томске на январь</a>
+    <a href="https://www.avito.ru/moskva/drugie_zhivotnye/ruchnaya_kapibara_borisych_3040134550">Купить капибару</a>
+
 </body>
 
 </html>
